2006-01-28  Atsushi Enomoto <atsushi@ximian.com>

	* XmlElement.cs, XmlAttribute.cs :
	  Avoid ChildNodes.Count and use FirstChild/NextSibling.

2006-01-28  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNode.cs, XmlIteratorNodeList.cs :
	  Now we can enable XmlIteratorNodeList again (mcs, incorrectly
	  removing nodes in the node list, was fixed).

2006-01-28  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocument.cs : in ReadNode() to consume element node, switched
	  to MoveToAttribute(int) since MoveToNextAttribute() was somehow
	  not working fine. It is needed to avoid Sys.Data test breakage
	  and anything else should be fixed indeed.

Fri Jan 27 20:39:48 CET 2006 Paolo Molaro <lupus@ximian.com>

	* XmlTextReader.cs, XmlChar.cs: more tweaks and speedups.

2006-01-27  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : optimization patch by Paolo.
	  Fast path optimization in PeekChar().
	  Avoid double-evaluation of PeekChar() and ReadChar() by new
	  Advance() method.

2006-01-27  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNode.cs : disabled XmlIteratorNodeList optimization. It caused
	  some kind of regression under mcs/tests/xml-025.cs.

2006-01-27  Atsushi Enomoto <atsushi@ximian.com>

	* XmlAttributeCollection.cs :
	  Replaced all Nodes.Count with Count (it could avoid extraneous
	  ArrayList creation in XmlNamedNodeMap). ID attribute adjustment
	  was extraneously done against all attribute nodes and thus there
	  was a plenty of call to Value.
	* XmlNamedNodeMap.cs : added comment on SetNamedItem() W3C spec
	  violation.

2006-01-27  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNode.cs,
	  XmlDocument.cs,
	  XmlAttribute.cs,
	  XmlElement.cs :
	  Added internal AppendChild() override that omites node type
	  checking, and used it in many places.

2006-01-27  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocument.cs : optimized ReadAttributeNode() to not call
	  MoveToAttribute() unneccesarily (call it only when ReadNode() is